// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Ander
    </h1>
    <h3>
      Ortiz
    </h3>
    <p
      class="mi-clase-favorita"
    >
      Elden Ring, Smash, Shovel knight
    </p>
    <p>
      4
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: rgb(0, 0, 0); color: white; border-radius: 10px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC","country":"Canadá"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Ander
  </h1>
  <h3>
    Ortiz
  </h3>
  <p
    class="mi-clase-favorita"
  >
    Elden Ring, Smash, Shovel knight
  </p>
  <p>
    4
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: rgb(0, 0, 0); color: white; border-radius: 10px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC","country":"Canadá"}
  </p>
</div>
`;
